# fr.oiimrosabel.Renouveau

./: .gitignore  README.md  fr.oiimrosabel.Renouveau.json  meson.build
data/: fr.oiimrosabel.Renouveau.desktop.in  fr.oiimrosabel.Renouveau.gschema.xml  fr.oiimrosabel.Renouveau.metainfo.xml.in  fr.oiimrosabel.Renouveau.service.in  meson.build  style.css
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: commands.py  engines.py  enums.py  main.blp  main.py  meson.build  records.py  shortcuts-dialog.blp  tools.py  updater.gresource.xml  updater.in  window.py
src/commands/: AptCommands.py  CommandRepository.py  FlatpakCommands.py  PacmanCommands.py  RpmCommands.py  SnapCommands.py
src/components/: FlatpakComponent.py  OutlookerDialog.py  SettingsComponent.py  SnapComponent.py  SystemComponent.py  Terminal.py  UpdateExpanderRow.py  UpdateRow.py  flatpak.blp  outlooker.blp  settings.blp  snap.blp  system.blp  terminal.blp  updextrow.blp  updrow.blp
src/engines/: Engine.py  FlatpakEngine.py  OutlookerEngine.py
src/enums/: CommandType.py  PackageManager.py  TerminalStyle.py  UpdateState.py
src/models/components/: FlatpakComponent.py  SettingsComponent.py  SnapComponent.py  SystemComponent.py  Terminal.py  UpdateExpanderRow.py  UpdateRow.py
src/models/pages/: StartPage.py  UpdatePage.py
src/pages/: FinishPage.py  StartPage.py  UpdatePage.py  finish.blp  start.blp  update.blp
src/records/: FlatpakRecord.py  OutlookerRecord.py  SettingsRecord.py  SnapRecord.py  SystemRecord.py
